<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_dog_breed" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/button_submit3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_submit3"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageview_dog3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imageview_dog3"
            app:srcCompat="@drawable/american_staffordshire_terrier_1" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_stop"
            android:textSize="20sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>